Fix slides not showing in production

--- a/src/index.css
+++ b/src/index.css
@@ -76,3 +76,7 @@ input {
 .highlight {
   background-color: rgba(255, 255, 255, 0.3);
 }
+
+.reveal {
+  opacity: 1 !important;
+}
